Bug 167883 - FILESAVE ODS A certain file hangs after the commit adding support for import/export of formatted chart titles
Summary: FILESAVE ODS A certain file hangs after the commit adding support for import/...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: x86-64 (AMD64) All
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:26.8.0
Keywords: bibisected, bisected, haveBacktrace, implementationError, perf
Depends on:
Blocks:
 
Reported: 2025-08-10 09:01 UTC by Buovjaga
Modified: 2026-01-23 09:59 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
ODS with the issue (598.34 KB, application/vnd.oasis.opendocument.spreadsheet)
2025-08-10 09:01 UTC, Buovjaga
Details
Perf flamegraph of saving (642.04 KB, image/svg+xml)
2025-08-10 09:02 UTC, Buovjaga
Details
Original template-like XLSX file (7.26 MB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2025-08-11 05:43 UTC, Buovjaga
Details
Perf flamegraph of saving (1.97 MB, image/svg+xml)
2025-09-22 10:05 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2025-08-10 09:01:54 UTC
Created attachment 202265 [details]
ODS with the issue

1. Open attached file
2. In the focused sheet 07, input 30 to G4 and save or save as

Seems to be hanging.

The file was originally an xlsx file, but I am unable to make a reproducer with it.

Before commit d7214aba95bbdcbd40e87ef50fc66f2e2ec4f5ff the saving happens in a normal way, albeit a bit slowly, taking about 10 secs for me. Commit verified in both Linux and Windows 24.8 repos.

I get it that the commit adds new functionality, so will not call this a regression.
Comment 1 Buovjaga 2025-08-10 09:02:51 UTC Comment hidden (obsolete)
Comment 2 Buovjaga 2025-08-11 05:43:25 UTC
Created attachment 202276 [details]
Original template-like XLSX file

Here is the original blank XLSX file.
Comment 3 Buovjaga 2025-09-22 10:05:22 UTC
Created attachment 202924 [details]
Perf flamegraph of saving

Redone flamegraph in Hotspot as the Flamegraph script is now broken with our setup.

Arch Linux 64-bit
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5effa8d0977ac9ce13a8e66cbd2302e585c41c6d
CPU threads: 8; OS: Linux 6.16; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 22 September 2025
Comment 4 Saburo 2025-10-16 06:55:30 UTC
reproduce
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d60ff8c8bd4e3ebf8f84f53448ead3c838332ea9
CPU threads: 8; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: threaded
Comment 5 Commit Notification 2026-01-21 11:26:49 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/386e7a4fffbeb40e7f4105923ddb2e210c0a2486

tdf#167883 avoid some throw/catch work

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2026-01-23 07:20:51 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0e7de7e614cfc23f890abe370c3ec31d057b89c2

tdf#167883 use appendTextPortion to construct svx text object

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2026-01-23 07:20:53 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1c7472f60b078ed8bb4f6f7d9868f11bf7e227bc

tdf#167883 use setPropertyValues to set props in bulk

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Buovjaga 2026-01-23 09:59:50 UTC
Great work, now the saving time is entirely acceptable!

Arch Linux 64-bit
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: e7edd94565e8dd323395ec316c482ec32f14638c
CPU threads: 8; OS: Linux 6.18; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 23 January 2026