tdf#167883 avoid some throw/catch work

which is expensive in high volumes. shaves 5% off save time.

Change-Id: I512e3b0ecf8c8f27dfc549ec9d2c2ad7f5873561
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197708
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 386e7a4fffbeb40e7f4105923ddb2e210c0a2486)
Reviewed-on: https://gerrit.collaboraoffice.com/c/core/+/283
Reviewed-by: Noel Grandin <noel.grandin@collabora.com>
Tested-by: Jenkins CPCI <releng@collaboraoffice.com>